TW20087817-2 prevent text overflowing the mod_board_note_text div

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -132,6 +132,7 @@
     .mod_board_note_content {
         .mod_board_note_text {
             font-size: 0.9em;
+            word-break: break-word;
         }
         .mod_board_note_heading {
             min-height: 22px;
